--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "rollup": "0.66.6",
     "rollup-plugin-sourcemaps": "0.4.2",
-    "rollup-plugin-typescript2": "0.17.2",
+    "rollup-plugin-typescript2": "^0.21.0",
     "tslint": "5.11.0",
     "typescript": "3.1.3"
   },
